--- a/conf/locale/ko/LC_MESSAGES/django.po
+++ b/conf/locale/ko/LC_MESSAGES/django.po
@@ -74,3 +74,6 @@ msgstr "비밀번호 재설정이 완료되었습니다."
 
 msgid "Invalid input."
 msgstr "잘못된 입력값입니다."
+
+msgid "Your email has been verified."
+msgstr "귀하의 이메일이 확인되었습니다."
